Open graph metadata

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Loli Feature Flags</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <title>Loli Feature Flags</title>
+    <meta name="description" content="Loli Feature Flags is a toolkit that allows you to build your own feature flag infrastructure for free.">
+
+    <meta property="og:title" content="Loli Feature Flags">
+    <meta property="og:description" content="Loli Feature Flags is a toolkit that allows you to build your own feature flag infrastructure for free.">
+    <meta property="og:image" content="https://www.lolifeatureflags.com/assets/og-image.jpg">
+
     <link rel="stylesheet" href="assets/index.css">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
 
 <body>
@@ -16,7 +23,7 @@
 
         <p>
             Loli Feature Flags is a toolkit that allows you to build your
-            own feature flag tooling.
+            own feature flag infrastructure for free.
         </p>
 
         <h1>GitHub</h1>
